# WixCMakeInheritance

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  bundle.wxs  license.rtf  vcredist.wxs  wix-arm64.template.in
.github/workflows/: windows.yml
SomeSharedLibrary/: CMakeLists.txt  Source1.cpp
SomeSharedLibrary/include/: Source1.h
WixCMakeInheritance/: CMakeLists.txt  WixCMakeInheritance.cpp  WixCMakeInheritance.h
WixStaticLibraryWithHeaders/: CMakeLists.txt  some_wsl.cpp  some_wsl.h
